# visible

./: dispatch_workflow.py  get_token.py  libvirt.yaml  requirements.txt  secret  virt_inv.yaml
.github/actions/action1/: action.yml
.github/actions/action2/: action.yml
.github/actions/action3/: action.yml
.github/actions/report/: action.yaml
.github/actions/set_env/: action.yml
.github/actions/sops_install/: action.yml  origin.txt
.github/workflows/: auto.yml  automerge.yaml  blank.yml  bump.yaml  clone_test.yml  context.yml  deploy.yaml  end.yaml  env_test.yml  example_00000.yaml  example_00001.yaml  example_00002.yaml  example_00003.yaml  example_00004.yaml  example_00005.yaml  example_00006.yaml  example_00007.yaml  example_00008.yaml  example_00009.yaml  example_00010.yaml  example_00011.yaml  example_00012.yaml  example_00013.yaml  example_00014.yaml  example_00015.yaml  example_00016.yaml  example_00017.yaml  example_00018.yaml  example_00019.yaml  example_00020.yaml  example_00021.yaml  example_00022.yaml  example_00023.yaml  example_00024.yaml  example_00025.yaml  example_00026.yaml  example_00027.yaml  example_00028.yaml  example_00029.yaml  example_00030.yaml  (+100474 more)
docker/: Dockerfile  entrypoint.sh  pyproject.toml
good/: foo
image/: Dockerfile
libvirt_network/tasks/: main.yaml
libvirt_network/templates/: network.xml.j2
libvirt_vms/tasks/: main.yaml
libvirt_vms/templates/: domain.xml.j2
