[tool.poetry]
name = "debug"
version = "1.0.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
ansible = "^5.9"
mitogen = "^0.3"
pytest = "^7.0"
ansible-lint = "6.0.2"
pytest-testinfra = "6.6.0"
pytest-forked = "1.4.0"
pytest-xdist= "2.5.0"
flaky = "3.7.0"
netaddr = "0.8.0"
websocket-client = "1.3.1"
requests = "2.27.1"
requests-toolbelt = "0.9.1"
google-auth = "2.6.0"
dnspython = "2.2.1"
beautifulsoup4 = "4.10.0"
python-dateutil = "2.8.2"
yamllint = "1.26.3"
black = "22.3.0"
feedparser = "6.0.8"
PyJWT = "2.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
